# cookiecutter_pybe

./: .gitignore  README.md  cookiecutter.json  requirements.txt
hooks/: post_gen_project.py  (+1 more)
{{ cookiecutter.project_slug }}/: .env.example  Makefile  alembic.ini  docker-compose.yml  environment.yaml  main.py  pyproject.toml  requirements.txt
{{ cookiecutter.project_slug }}/.docker/: Dockerfile
{{ cookiecutter.project_slug }}/alembic/: env.py
{{ cookiecutter.project_slug }}/apps/polls/: admin.py
{{ cookiecutter.project_slug }}/apps/polls/adapters/: __init__.py
{{ cookiecutter.project_slug }}/apps/polls/routers/: choices.py  questions.py
{{ cookiecutter.project_slug }}/config/: asgi.py  settings.py  urls.py
{{ cookiecutter.project_slug }}/mysite/: asgi.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: Dockerfile  main.py  pyproject.toml
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/api/: deps.py  routes.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/api/v1/: meme.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/core/: config.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/db/: init_db.py  session.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/models/: meme.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/repositories/: meme.py  sqlalchemy.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/schemas/: meme.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/tests/: test_routes.py
