[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = ["{{ cookiecutter.username }} <{{ cookiecutter.email }}>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
